--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <td><h1>Dalen Brown</h1>
         <p><em>Student at <strong>The App Brewery</strong>.</em></p>
         <br>
-        <p>I am a student learning how to code but I have a full time job as a CDL Driver for Pepsi</p></td>
+        <p>I am a student learning how to code. I have a full time job as a CDL Driver for Pepsi</p></td>
         </tr>
     </table>
   
