--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <hr>
   <li><a href="hobbies.html">My Hobbies</a></li>
 
-  <li><a href="contactme.html<a">Contact Me</a></li>
+  <li><a href="contactme.html">Contact Me</a></li>
   </p>
 
 </html>
